{
  "version": 4,
  "terraform_version": "1.0.9",
  "serial": 84,
  "lineage": "b91b91c3-4336-3ea2-1dd3-d0c5578dad07",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "builder",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2021-12-29T01:02:01.336-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/metal-direction-333819/global/firewalls/builder-firewall",
            "log_config": [],
            "name": "builder-firewall",
            "network": "https://www.googleapis.com/compute/v1/projects/metal-direction-333819/global/networks/default-net",
            "priority": 1000,
            "project": "metal-direction-333819",
            "self_link": "https://www.googleapis.com/compute/v1/projects/metal-direction-333819/global/firewalls/builder-firewall",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [
              "builder"
            ],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "webserver",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22",
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2021-12-29T01:02:01.424-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/metal-direction-333819/global/firewalls/webserver-firewall",
            "log_config": [],
            "name": "webserver-firewall",
            "network": "https://www.googleapis.com/compute/v1/projects/metal-direction-333819/global/networks/default-net",
            "priority": 1000,
            "project": "metal-direction-333819",
            "self_link": "https://www.googleapis.com/compute/v1/projects/metal-direction-333819/global/firewalls/webserver-firewall",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [
              "webserver"
            ],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "builder",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-10-buster-v20211209",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/metal-direction-333819/zones/europe-central2-a/disks/builder"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/metal-direction-333819/zones/europe-central2-a/instances/builder",
            "instance_id": "2562545562664671994",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-small",
            "metadata_fingerprint": "bPgT71Ydl_w=",
            "name": "builder",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.118.93.174",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/metal-direction-333819/global/networks/default-net",
                "network_ip": "10.186.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/metal-direction-333819/regions/europe-central2/subnetworks/default-net",
                "subnetwork_project": "metal-direction-333819"
              }
            ],
            "project": "metal-direction-333819",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/metal-direction-333819/zones/europe-central2-a/instances/builder",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "builder"
            ],
            "tags_fingerprint": "R5sZrJOPG0Y=",
            "zone": "europe-central2-a"
          },
          "dependencies": [
            "google_compute_network.default",
            "google_compute_firewall.builder"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "dev",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-10-buster-v20211209",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/metal-direction-333819/zones/europe-central2-a/disks/dev"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/metal-direction-333819/zones/europe-central2-a/instances/dev",
            "instance_id": "1634456928759421689",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-small",
            "metadata_fingerprint": "bPgT71Ydl_w=",
            "name": "dev",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.118.100.58",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/metal-direction-333819/global/networks/default-net",
                "network_ip": "10.186.0.4",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/metal-direction-333819/regions/europe-central2/subnetworks/default-net",
                "subnetwork_project": "metal-direction-333819"
              }
            ],
            "project": "metal-direction-333819",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/metal-direction-333819/zones/europe-central2-a/instances/dev",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "webserver"
            ],
            "tags_fingerprint": "_TImyF0dyaI=",
            "zone": "europe-central2-a"
          },
          "dependencies": [
            "google_compute_firewall.webserver",
            "google_compute_network.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "prod",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-10-buster-v20211209",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/metal-direction-333819/zones/europe-central2-a/disks/prod"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/metal-direction-333819/zones/europe-central2-a/instances/prod",
            "instance_id": "8572079136261118713",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-small",
            "metadata_fingerprint": "bPgT71Ydl_w=",
            "name": "prod",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.118.0.175",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/metal-direction-333819/global/networks/default-net",
                "network_ip": "10.186.0.3",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/metal-direction-333819/regions/europe-central2/subnetworks/default-net",
                "subnetwork_project": "metal-direction-333819"
              }
            ],
            "project": "metal-direction-333819",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/metal-direction-333819/zones/europe-central2-a/instances/prod",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "webserver"
            ],
            "tags_fingerprint": "_TImyF0dyaI=",
            "zone": "europe-central2-a"
          },
          "dependencies": [
            "google_compute_firewall.webserver",
            "google_compute_network.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": true,
            "delete_default_routes_on_create": false,
            "id": "projects/metal-direction-333819/global/networks/default-net",
            "mtu": 0,
            "name": "default-net",
            "project": "metal-direction-333819",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/metal-direction-333819/global/networks/default-net"
          }
        }
      ]
    }
  ]
}